--- a/src/styles/sass/components/hero/_hero-information.scss
+++ b/src/styles/sass/components/hero/_hero-information.scss
@@ -23,7 +23,7 @@
     align-items: center;
     gap: 3.2rem;
     &--icon {
-      fill: $color-accent-dark-2;
+      @include theme-aware(fill, color-accent-dark-2);
       @include responsive(lg) {
         width: 1.4rem;
         height: 1.4rem;
