--- a/src/styles/sass/base/_reset.scss
+++ b/src/styles/sass/base/_reset.scss
@@ -7,7 +7,7 @@
 .bg-primary-dont-move {
   width: 100%;
   height: 90rem;
-  background: linear-gradient(180deg, $color-prmary 0%, $color-white 40.5%);
+  @include theme-aware-gradient(color-prmary, $color-white, 180deg, 0%, 40.5%);
   position: absolute;
   z-index: map-get($z-index, "background");
   top: 0;
