--- a/src/styles/sass/components/UI/_simple-text.scss
+++ b/src/styles/sass/components/UI/_simple-text.scss
@@ -2,6 +2,6 @@
   opacity: 0.6;
   line-height: 2.8rem;
   &--color-primary {
-    color: $color-prmary-dark-3;
+    @include theme-aware(color, color-prmary-dark-3);
   }
 }
