--- a/src/styles/sass/components/contact/_contact-info.scss
+++ b/src/styles/sass/components/contact/_contact-info.scss
@@ -18,10 +18,10 @@
       align-items: center;
       column-gap: 1.6rem;
       row-gap: 0.4rem;
-      color: $color-accent-dark-3;
+      @include theme-aware(color, color-accent-dark-3);
       font-size: 1.4rem;
       &--icon {
-        fill: $color-accent-dark-1;
+        @include theme-aware(fill, color-accent-dark-1);
         grid-row: 1/-1;
         @include responsive(2md) {
           width: 2.4rem;
@@ -29,7 +29,7 @@
         }
       }
       &--value {
-        color: rgba($color-accent-dark-3, 0.6);
+        @include theme-aware-rgba(color, color-accent-dark-3, 0.6);
       }
     }
   }
@@ -39,7 +39,7 @@
     gap: 1.6rem;
     &__title {
       font-size: 1.6rem;
-      color: $color-accent-dark-2;
+      @include theme-aware(color, color-accent-dark-2);
     }
     &__logos {
       display: flex;
