--- a/src/styles/sass/components/education/_education-table.scss
+++ b/src/styles/sass/components/education/_education-table.scss
@@ -10,7 +10,7 @@
     position: absolute;
     width: 0.4rem;
     height: 100%;
-    background-color: $color-prmary;
+    @include theme-aware(background-color, color-prmary);
     left: 50%;
     transform: translateX(-50%);
     border-radius: 1.6rem;
@@ -27,7 +27,7 @@
       width: 0.8rem;
       height: 0.8rem;
       border-radius: 50%;
-      background-color: $color-prmary-dark-3;
+      @include theme-aware(background-color, color-prmary-dark-3);
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -43,19 +43,19 @@
       &__cross-line {
         width: 8rem;
         height: 0.2rem;
-        border-top: 0.2rem dashed black;
+        border-top: 0.2rem dashed $color-dark;
       }
       &__year {
         font-family: branding-bold;
         font-size: 2.4rem;
-        color: rgba($color-prmary-dark-3, 0.6);
+        @include theme-aware-rgba(color, color-prmary-dark-3, 0.6);
       }
       &__info {
         width: 31.2rem;
         padding: 1.6rem;
         background-color: $color-white-2;
         border-radius: $border-raduis-main * 1rem;
-        box-shadow: 0 0 0.8rem $color-accent-dark-2;
+        @include theme-aware-box-shadow(color-accent-dark-2);
         display: flex;
         flex-direction: column;
         gap: 0.8rem;
@@ -63,11 +63,11 @@
           width: 25rem;
         }
         &--title {
-          color: $color-accent-dark-2;
+          @include theme-aware(color, color-accent-dark-2);
           font-family: branding-bold;
         }
         &--text {
-          color: rgba($color-accent-dark-3, 0.7);
+          @include theme-aware-rgba(color, color-accent-dark-3, 0.7);
           font-size: 1.2rem;
           letter-spacing: 5%;
           line-height: 2.2rem;
