--- a/src/styles/sass/components/last-project/_last-project.scss
+++ b/src/styles/sass/components/last-project/_last-project.scss
@@ -7,13 +7,13 @@
     z-index: map-get($z-index, lastbackground);
     width: 100%;
     height: 100%;
-    background-color: $color-prmary-light-3;
+    @include theme-aware(background-color, color-prmary-light-3);
     &::after {
       content: "";
       position: absolute;
       width: 40%;
       height: 20%;
-      background-color: $color-prmary-light-3;
+      @include theme-aware(background-color, color-prmary-light-3);
       bottom: 0;
       right: 20%;
       transform: translateY(45%);
@@ -26,7 +26,13 @@
       width: 4.8rem;
       height: 4.8rem;
       border-radius: 50%;
-      border: 1rem solid rgba($color-tertiary-light-2, 0.1);
+      @include theme-aware-outline(
+        border,
+        color-tertiary-light-2,
+        1rem,
+        solid,
+        0.1
+      );
       top: 20%;
       left: 30%;
       z-index: map-get($z-index, lastbackgroundshapes);
