--- a/src/styles/sass/components/projects/_projects-nav.scss
+++ b/src/styles/sass/components/projects/_projects-nav.scss
@@ -24,7 +24,7 @@
           left: -0.8rem;
           width: 0.3rem;
           height: 100%;
-          background-color: $color-accent;
+          @include theme-aware(background-color, color-accent);
           border-radius: 10rem;
         }
       }
