--- a/src/styles/sass/themes/_color-palette.scss
+++ b/src/styles/sass/themes/_color-palette.scss
@@ -49,4 +49,29 @@ $themes: (
     color-tertiary-light-2: #b5d8ff,
     color-tertiary-light-3: #edf5ff,
   ),
+  purple: (
+    color-prmary: #6667ab,
+    color-prmary-dark-3: #0a0a11,
+    color-prmary-dark-2: #292944,
+    color-prmary-dark-1: #474878,
+    color-prmary-light-1: #9495c4,
+    color-prmary-light-2: #c2c2dd,
+    color-prmary-light-3: #f0f0f7,
+    //////////////////////////////////
+    color-accent: #ab8978,
+    color-accent-dark-3: #110e0c,
+    color-accent-dark-2: #443730,
+    color-accent-dark-1: #786054,
+    color-accent-light-1: #c4aca1,
+    color-accent-light-2: #ddd0c9,
+    color-accent-light-3: #f7f3f2,
+    /////////////////////////////////
+    color-tertiary: #6bab55,
+    color-tertiary-dark-3: #0b1108,
+    color-tertiary-dark-2: #2b4422,
+    color-tertiary-dark-1: #4b783b,
+    color-tertiary-light-1: #97c488,
+    color-tertiary-light-2: #c4ddbb,
+    color-tertiary-light-3: #f0f7ee,
+  ),
 );
